--- a/testbed/software/RobotManager/requirements.txt
+++ b/testbed/software/RobotManager/requirements.txt
@@ -1,3 +1,4 @@
+# bilbolab packages
 orjson~=3.10.11
 cobs~=1.2.1
 pyttsx3~=2.98
@@ -37,3 +38,12 @@ Flask~=3.1.1
 flask-cors~=6.0.1
 Flask-SocketIO~=5.5.1
 opencv-python
+
+# master thesis packages
+pettingzoo~=1.24.3
+wheel==0.45.1
+python-fcl >= 0.7
+cvxpy >= 1.7.3
+audioop-lts; python_version >= "3.13"
+torch-geometric >= 2.6.1
+torch >= 2.8.0
